<resources>

    <string name="app_name">Soldieri</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_soldieri">Soldieri</string>
    <string name="tour_name">Tour Name</string>
    <string name="tour_name_hint">Enter Tour Name</string>
    <string name="tour_date">Tour Date</string>
    <string name="tour_date_hint">Enter Tour Date</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_submit">Save</string>
    <string name="tour_people">No. of People</string>
    <string name="tour_people_hint">Number of people</string>
    <string name="tour_desc">Tour Description</string>
    <string name="tour_desc_hint">Enter Description</string>
    <string name="title_activity_list_tours_items">ListToursItemsActivity</string>
    <string name="dialog_uname">Name </string>
    <string name="dialog_submit">Add</string>
    <string name="dialog_cancel">Cancel</string>

</resources>