<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:background="#656565"
                android:padding="5dp">
                <Button android:id="@+id/btnSubmit" 
                        android:text="@string/btn_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                <Button android:id="@+id/btnCancel" 
                        android:text="@string/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
        </LinearLayout>
        <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentTop="true"
                android:layout_above="@id/buttons">
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp">
                        <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingTop="5dp">
                                <TextView android:id="@+id/lblTourName"  
                                    	android:layout_width="fill_parent"
                                        android:layout_height="wrap_content" 
                                        android:text="@string/tour_name" />
                                <EditText android:id="@+id/txtTourName" 
                                        android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"
                                        android:inputType="textCapWords"
        								android:hint="@string/tour_name_hint"
                                         />
                        </LinearLayout>
                        <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingTop="5dp">
                                <TextView android:id="@+id/lblDate"  
                                    	android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/tour_date"  />
                                
								<EditText
                                    	android:id="@+id/txtTourDate"   
                                        android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"
                                        android:hint="@string/tour_date_hint" />
								
                                <Button
									android:id="@+id/btnDate"
									android:layout_width="fill_parent"
									android:layout_height="wrap_content"
									android:text="Set the Date">
								</Button>

                                
                        </LinearLayout>
                        <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingTop="5dp">
                                <TextView android:id="@+id/lblNoPeople" 
                                    	android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/tour_people" />

                                <EditText
                                    android:id="@+id/txtTourNoPeople"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:inputType="number"
                                    android:hint="@string/tour_people_hint" >
                                </EditText>
                        </LinearLayout>
                        <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingTop="5dp">
                                <TextView android:id="@+id/lblDesc" 
                                    	android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/tour_desc" />

                                <EditText
                                    android:id="@+id/txtDesc"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:inputType="textMultiLine"
                                    android:hint="@string/tour_desc_hint" >
                                    
                                </EditText>

                                 <TextView android:id="@+id/lblMessage" 
								        android:layout_width="fill_parent"
								        android:layout_height="wrap_content"
								        android:textColor="#ff0000"
								        android:padding="10dip"
								        android:layout_marginTop="15dip"/>
                        </LinearLayout>
                </LinearLayout>
        </ScrollView>
</RelativeLayout>       